--- a/two_page/style.css
+++ b/two_page/style.css
@@ -20,6 +20,8 @@ body {
 
 .dot {
   position: absolute;
+  left: 300px;
+  top: 300px;
   height: 20px;
   width: 20px;
   background-color: black;
